# itl-chorus

./: .gitmodules  Cargo.toml  Dockerfile  README.md  _typos.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker-image.yml
common/: Cargo.toml
common/src/: lib.rs  name.rs
frontend/: .gitignore  Cargo.toml  index.html
frontend/src/: api.rs  index.js  lib.rs  main.rs  midiplayer.rs  router.rs  util.rs
frontend/src/assets/: index.js  style.css
frontend/src/components/: chat.rs  chat_input.rs  chat_message.rs  mod.rs  room_creator.rs  room_joiner.rs  upload_midi.rs
frontend/src/components/chat/: chat_message.rs  mod.rs
frontend/src/pages/: home.rs  mod.rs  room.rs
itlc/: Cargo.toml
itlc/src/: main.rs
itlc/src/components/: mod.rs  upload_midi.rs
itlcc/: Cargo.toml
itlcd/: Cargo.toml  dist
itlcd/src/: main.rs  midi.rs
libitlc/: Cargo.toml
libitlc/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  midi.rs  names.rs  room.rs
server/src/actors/: client.rs  mod.rs  room.rs
server/src/actors/chat/: client.rs  mod.rs  room.rs
server/src/api/: mod.rs  room.rs
types/: Cargo.toml
types/src/: messages.rs
