[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = { version = "1.17", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = []
server = ["dep:once_cell", "dep:rand"]