[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
midly = "0.5"
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }

[features]
default = []
server = ["dep:rand"]
