[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gloo = "0.8"
js-sys = "0.3"
log = "0.4"
midly = "0.5"
reqwest = { version = "0.11", features = ["multipart"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["File", "DragEvent", "DataTransfer", "Location", "Window"] }
yew-router = "0.17"
yew = { version = "0.20", features = ["csr"] }

# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
