[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

anyhow = "1.0"
gloo = "0.8"
# gloo-net = { version = "0.2", features = ["http", "websocket"] }
gloo-net = { git = "https://github.com/Alextopher/gloo", branch = "c-common-traits", features = ["http", "websocket"] }
getrandom = { version = "0.2", features = ["js"] } # https://docs.rs/getrandom/latest/getrandom/#webassembly-support
js-sys = "0.3"
log = "0.4"
midly = "0.5"
reqwest = { version = "0.11", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["File", "DragEvent", "DataTransfer", "Location", "Window"] }
yew-router = "0.17"
yew = { version = "0.20", features = ["csr"] }
futures = "0.3.28"
serde-wasm-bindgen = "0.5.0"

