[package]
name = "itlcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
gloo = "0.8"
js-sys = "0.3"
midly = "0.5"
yew = "0.19"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
