[package]
name = "itlcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8"
yew = "0.19"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "DragEvent", "DataTransfer"] }
reqwest = { version = "0.11", features = ["multipart"] }
log = "0.4.17"
wasm-logger = "0.2.0"
midly = "0.5"
wasm-bindgen-futures = "0.4.33"
