[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
actix-web-actors = "4.1"
midi = "0.1"
midly = "0.5"
actix-multipart = "0.6"
uuid = "1.2"
futures-util = "0.3"
sanitize-filename = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-files = "0.6.2"
time = "0.3.17"
tokio = { version = "1.23", features = ["sync"] }
rand = "0.8.5"
