[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
actix-web-actors = "4.1"
actix-multipart = "0.6"
actix-files = "0.6.2"
midly = "0.5"
uuid = { version = "1.3", features = ["v4", "serde"] }
futures-util = "0.3"
sanitize-filename = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["sync"] }
rand = "0.8"
actix = "0.13.0"
log = "0.4.17"
