[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", features = ["server"] }

actix-web = "4.1"
actix-web-actors = "4.1"
actix-multipart = "0.6"
actix-files = "0.6"
actix = "0.13"
env_logger = "0.10"
futures-util = "0.3"
log = "0.4"
midly = "0.5"
rand = "0.8"
sanitize-filename = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["sync"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = "1.17"